--- a/WorldTrotterBNR/Base.lproj/Main.storyboard
+++ b/WorldTrotterBNR/Base.lproj/Main.storyboard
@@ -10,20 +10,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Conversion View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WorldTrotterBNR" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotterBNR" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="212" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7zi-rE-udI">
-                                <rect key="frame" x="132" y="28" width="111" height="84"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
-                                <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Farenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7h-m4-sf7">
                                 <rect key="frame" x="50" y="120" width="275.5" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
@@ -42,6 +36,19 @@
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="value" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="geK-ta-fGe">
+                                <rect key="frame" x="62.5" y="28" width="250" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="1w9-py-HZN"/>
+                                </constraints>
+                                <color key="textColor" red="0.88235294119999996" green="0.34509803919999998" blue="0.16078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad"/>
+                                <connections>
+                                    <action selector="fahrenheitFieldEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="95z-xt-XOM"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="tpp-4g-puw"/>
+                                </connections>
+                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sX3-eR-my1">
                                 <rect key="frame" x="129" y="222" width="117" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
@@ -50,22 +57,35 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="7zi-rE-udI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BOb-kA-01D"/>
-                            <constraint firstItem="7zi-rE-udI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="Qy9-1c-JRP"/>
                             <constraint firstItem="sX3-eR-my1" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="RUa-QV-Uda"/>
-                            <constraint firstItem="u7h-m4-sf7" firstAttribute="top" secondItem="7zi-rE-udI" secondAttribute="bottom" constant="8" id="XCD-TU-oiy"/>
+                            <constraint firstItem="geK-ta-fGe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="STp-QS-Evo"/>
+                            <constraint firstItem="geK-ta-fGe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WgZ-5B-PAa"/>
                             <constraint firstItem="SRf-lu-Mim" firstAttribute="top" secondItem="sX3-eR-my1" secondAttribute="bottom" constant="8" id="azO-Tb-DdZ"/>
-                            <constraint firstItem="7zi-rE-udI" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="ivM-I9-8mW"/>
+                            <constraint firstItem="u7h-m4-sf7" firstAttribute="top" secondItem="geK-ta-fGe" secondAttribute="bottom" constant="8" id="iUX-Ai-9n0"/>
+                            <constraint firstItem="u7h-m4-sf7" firstAttribute="centerX" secondItem="geK-ta-fGe" secondAttribute="centerX" id="j3n-90-rhO"/>
                             <constraint firstItem="sX3-eR-my1" firstAttribute="top" secondItem="qOp-kM-T5S" secondAttribute="bottom" constant="8" id="kSh-nF-D6G"/>
                             <constraint firstItem="SRf-lu-Mim" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="qF7-np-WMR"/>
                             <constraint firstItem="qOp-kM-T5S" firstAttribute="top" secondItem="u7h-m4-sf7" secondAttribute="bottom" constant="8" id="wee-AD-NWo"/>
                             <constraint firstItem="qOp-kM-T5S" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="zUo-fF-qfr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="M8M-3D-9LA" appends="YES" id="faL-he-itS"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="celsiusLabel" destination="sX3-eR-my1" id="uAq-E8-wbT"/>
+                        <outlet property="textField" destination="geK-ta-fGe" id="xO4-wI-NI6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="M8M-3D-9LA">
+                    <connections>
+                        <action selector="dismissKeyboard:" destination="BYZ-38-t0r" id="TK4-aN-NEo"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
         </scene>
     </scenes>
