--- a/WorldTrotterBNR/Base.lproj/Main.storyboard
+++ b/WorldTrotterBNR/Base.lproj/Main.storyboard
@@ -10,6 +10,32 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--BigNerdRanch.com-->
+        <scene sceneID="i4d-Pb-Rqt">
+            <objects>
+                <viewController id="TSv-zu-7II" customClass="BNRWebViewViewController" customModule="WorldTrotterBNR" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wx5-f6-Eku">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BZt-xD-NI1">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="VHX-Ao-J2K"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="BigNerdRanch.com" image="icons8-geography" id="wif-3f-Z6O"/>
+                    <connections>
+                        <outlet property="webView" destination="BZt-xD-NI1" id="MaW-cy-vd9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="11g-B2-3av" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-591.20000000000005" y="632.83358320839591"/>
+        </scene>
         <!--Convert-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -94,10 +120,6 @@
         <scene sceneID="qdb-49-0Db">
             <objects>
                 <viewController id="Xd8-ji-Owl" customClass="MapViewController" customModule="WorldTrotterBNR" customModuleProvider="target" sceneMemberID="viewController">
-                    <mapView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="YaL-h9-XsR">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </mapView>
                     <tabBarItem key="tabBarItem" title="Map" image="MapIcon" id="GGS-Hz-o3g"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rjY-Td-mEO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -116,15 +138,17 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="ite-wg-9U7"/>
                         <segue destination="Xd8-ji-Owl" kind="relationship" relationship="viewControllers" id="WdS-FY-4ab"/>
+                        <segue destination="TSv-zu-7II" kind="relationship" relationship="viewControllers" id="Hb3-CS-E7B"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3PC-U4-deK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-438" y="34"/>
+            <point key="canvasLocation" x="-591" y="-62"/>
         </scene>
     </scenes>
     <resources>
         <image name="ConvertIcon" width="48" height="32"/>
         <image name="MapIcon" width="48" height="32"/>
+        <image name="icons8-geography" width="25" height="25"/>
     </resources>
 </document>
