--- a/WorldTrotterBNR/Base.lproj/Main.storyboard
+++ b/WorldTrotterBNR/Base.lproj/Main.storyboard
@@ -44,20 +44,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Farenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7h-m4-sf7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Farenheit" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7h-m4-sf7">
                                 <rect key="frame" x="50" y="120" width="275.5" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOp-kM-T5S">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOp-kM-T5S">
                                 <rect key="frame" x="131" y="171" width="114" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celsiuis" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRf-lu-Mim">
-                                <rect key="frame" x="60.5" y="314" width="253.5" height="43"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celsius" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRf-lu-Mim">
+                                <rect key="frame" x="64.5" y="314" width="245.5" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -75,8 +75,8 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="tpp-4g-puw"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sX3-eR-my1">
-                                <rect key="frame" x="129" y="222" width="117" height="84"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sX3-eR-my1">
+                                <rect key="frame" x="129.5" y="222" width="116.5" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -85,16 +85,24 @@
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="SRf-lu-Mim" secondAttribute="trailing" id="005-8I-h0F"/>
+                            <constraint firstItem="qOp-kM-T5S" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dzz-Ir-5Rz"/>
+                            <constraint firstItem="sX3-eR-my1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QRA-Lh-yUu"/>
                             <constraint firstItem="sX3-eR-my1" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="RUa-QV-Uda"/>
                             <constraint firstItem="geK-ta-fGe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="STp-QS-Evo"/>
                             <constraint firstItem="geK-ta-fGe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WgZ-5B-PAa"/>
                             <constraint firstItem="SRf-lu-Mim" firstAttribute="top" secondItem="sX3-eR-my1" secondAttribute="bottom" constant="8" id="azO-Tb-DdZ"/>
                             <constraint firstItem="u7h-m4-sf7" firstAttribute="top" secondItem="geK-ta-fGe" secondAttribute="bottom" constant="8" id="iUX-Ai-9n0"/>
                             <constraint firstItem="u7h-m4-sf7" firstAttribute="centerX" secondItem="geK-ta-fGe" secondAttribute="centerX" id="j3n-90-rhO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sX3-eR-my1" secondAttribute="trailing" id="kCc-8A-Xf8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="qOp-kM-T5S" secondAttribute="trailing" id="kNE-9N-xsX"/>
                             <constraint firstItem="sX3-eR-my1" firstAttribute="top" secondItem="qOp-kM-T5S" secondAttribute="bottom" constant="8" id="kSh-nF-D6G"/>
+                            <constraint firstItem="SRf-lu-Mim" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mpR-7q-L0E"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="u7h-m4-sf7" secondAttribute="trailing" id="nVQ-WX-f4X"/>
                             <constraint firstItem="SRf-lu-Mim" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="qF7-np-WMR"/>
                             <constraint firstItem="qOp-kM-T5S" firstAttribute="top" secondItem="u7h-m4-sf7" secondAttribute="bottom" constant="8" id="wee-AD-NWo"/>
                             <constraint firstItem="qOp-kM-T5S" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="zUo-fF-qfr"/>
+                            <constraint firstItem="u7h-m4-sf7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zxI-qQ-Hmc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <connections>
@@ -132,6 +140,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="tA8-6i-EDK" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DYl-LX-O6R">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
